Added some images and updated css

--- a/places.html
+++ b/places.html
@@ -54,5 +54,40 @@
         </div>
       </div>
     </nav>
+   <div class="content-container container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="content">
+        <h2 class="mb-2">Top Attractions in Odesa</h2>
+        <img src="images/garden.jpeg" alt class="img-flex">
+        <h6>City Garden</h6>
+        <img src="images/deribasovska.jpeg" alt class="img-flex">
+        <h6>Deribasovskaya Street</h6>
+      <p class="mt-2">
+        Odessa National Academic Opera and Ballet Theater
+        </br >
+        Odessa Delphinarium Nemo 
+        </br >
+        Potemkin Stairs
+        </br >
+        Arcadia district
+        </br >
+        Beach Golden Shore
+        </br >
+        Museum of Interesting Science
+        </br >
+        Secrets of Underground Odessa Museum
+      </p>
+      </div>  
+    </div>
+        <div class="col-md-6"> 
+            <h2 class="mb-2">Things to do and places to visit</h2>
+            <img src="images/passage.jpeg" alt class="img-flex">
+            <h6>Odessa Passage</h6>
+            <img src="images/boulevard.jpeg" alt class="img-flex">
+            <h6>Primorsky Boulevard</h6>
+            <img src="images/beach.jpeg" alt class="img-flex">
+            <h6>Beach Golden Shore</h6>
+        </div>
   </body>
 </html>
