--- a/places.html
+++ b/places.html
@@ -58,21 +58,22 @@
     <div class="row">
       <div class="col-md-6">
         <div class="content">
-        <h2 class="mb-2">Top Attractions in Odesa</h2>
-        <img src="images/garden.jpeg" alt class="img-flex">
-        <h6>City Garden</h6>
-        <img src="images/deribasovska.jpeg" alt class="img-flex">
-        <h6>Deribasovskaya Street</h6>
+           <h2 class="mb-2">Top Attractions in Odesa</h2>
+              <img src="images/garden.jpeg" alt class="img-flex">
+              </br >
+              <a href="https://en.wikipedia.org/wiki/Odesa_city_garden" class="attraction-link" title="Places">City Garden</a>
+              <img src="images/deribasovska.jpeg" alt class="img-flex">
+              <a href="https://en.wikipedia.org/wiki/Derybasivska_Street" class="attraction-link" title="Places">Deribasovskaya Street</a>
+              <img src="images/delphinarium.jpeg" alt class="img-flex">
+              <a href="http://en.nemo.ua/od/" class="attraction-link" title="Places">Odessa Delphinarium Nemo</a>
       <p class="mt-2">
-        Odessa National Academic Opera and Ballet Theater
+        Among other awesome locations are:
         </br >
-        Odessa Delphinarium Nemo 
+        Odessa National Academic Opera and Ballet Theater
         </br >
         Potemkin Stairs
         </br >
         Arcadia district
-        </br >
-        Beach Golden Shore
         </br >
         Museum of Interesting Science
         </br >
@@ -83,11 +84,12 @@
         <div class="col-md-6"> 
             <h2 class="mb-2">Things to do and places to visit</h2>
             <img src="images/passage.jpeg" alt class="img-flex">
-            <h6>Odessa Passage</h6>
+            <a href="https://en.wikipedia.org/wiki/Odesa_Passage" class="attraction-link" title="Places">Odessa Passage</a>
             <img src="images/boulevard.jpeg" alt class="img-flex">
-            <h6>Primorsky Boulevard</h6>
+            <a href="https://skopeli.com/en/info/primorsky_boulevard" class="attraction-link" title="Places">Primorsky Boulevard</a>
             <img src="images/beach.jpeg" alt class="img-flex">
-            <h6>Beach Golden Shore</h6>
+            <a href="https://www.tripadvisor.co.uk/Attraction_Review-g295368-d6925372-Reviews-Beach_Golden_Shore-Odessa_Odessa_Oblast.html" class="attraction-link" title="Places">Beach Golden Shore</a>
+        </div>
         </div>
   </body>
 </html>
