Some updates on css and links

--- a/places.html
+++ b/places.html
@@ -66,20 +66,11 @@
               <a href="https://en.wikipedia.org/wiki/Derybasivska_Street" class="attraction-link" title="Places">Deribasovskaya Street</a>
               <img src="images/delphinarium.jpeg" alt class="img-flex">
               <a href="http://en.nemo.ua/od/" class="attraction-link" title="Places">Odessa Delphinarium Nemo</a>
-      <p class="mt-2">
-        Among other awesome locations are:
-        </br >
-        Odessa National Academic Opera and Ballet Theater
-        </br >
-        Potemkin Stairs
-        </br >
-        Arcadia district
-        </br >
-        Museum of Interesting Science
-        </br >
-        Secrets of Underground Odessa Museum
-      </p>
-      </div>  
+              <img src="images/theatre.jpeg" alt class="img-flex">
+              <a href="https://operahouse.od.ua/en/" class="attraction-link" title="Places">Odessa National Academic Opera and Ballet Theater</a>
+              <img src="images/science.jpeg" alt class="img-flex">
+              <a href="https://www.tripadvisor.co.uk/Attraction_Review-g295368-d6755140-Reviews-Museum_of_Interesting_Science-Odessa_Odessa_Oblast.html" class="attraction-link" title="Places">Museum of Interesting Science</a>
+            </div>  
     </div>
         <div class="col-md-6"> 
             <h2 class="mb-2">Things to do and places to visit</h2>
@@ -89,7 +80,11 @@
             <a href="https://skopeli.com/en/info/primorsky_boulevard" class="attraction-link" title="Places">Primorsky Boulevard</a>
             <img src="images/beach.jpeg" alt class="img-flex">
             <a href="https://www.tripadvisor.co.uk/Attraction_Review-g295368-d6925372-Reviews-Beach_Golden_Shore-Odessa_Odessa_Oblast.html" class="attraction-link" title="Places">Beach Golden Shore</a>
+            <img src="images/stairs.jpeg" alt class="img-flex">
+            <a href="https://en.wikipedia.org/wiki/Potemkin_Stairs" class="attraction-link" title="Places">Potemkin Stairs</a>
+            <img src="images/arcadianight.jpeg" alt class="img-flex">
+            <a href="http://arcadia-city.com/" class="attraction-link" title="Places">Arcadia district</a>
         </div>
-        </div>
-  </body>
+    </div>
+</body>
 </html>
