--- a/index.html
+++ b/index.html
@@ -64,5 +64,13 @@
         <a href="about.html" class="about-link" title="History">History</a>
       </div>
     </div>
+    <div>
+      <p class="text-center mt-4">
+        ✌️ This project was coded by Olha Bondarenko and it is
+        <a href="https://github.com/Olha1990/homepage-project" target="_blank"
+          >open-sourced</a
+        >
+      </p>
+    </div>
   </body>
 </html>
