Changed the github link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
     <div>
       <p class="text-center mt-4">
         ✌️ This project was coded by Olha Bondarenko and it is
-        <a href="https://github.com/Olha1990/homepage-project" target="_blank"
+        <a
+          href="https://github.com/Olha1990/Hometown-Landing-Page-Challenge"
+          target="_blank"
           >open-sourced</a
         >
       </p>
